--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
             </section>
     
 
-    <footer>Sitte Criado por <a href="https://twitter.com/guanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/cursos/" target="_blank">CursoemVideo</a></footer>
+    <footer>Site Criado por <a href="https://twitter.com/guanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.cursoemvideo.com/cursos/" target="_blank">CursoemVideo</a></footer>
 </body>
 </html>
